Fixed bug with location artwork images covering up back/next buttons by adding max-height

--- a/client/components/artwork/style/locationArtwork.css
+++ b/client/components/artwork/style/locationArtwork.css
@@ -1,7 +1,7 @@
 .carousel-img {
   object-fit: cover;
-  width: 100%;
   max-width: 600px;
+  max-height: 600px;
   height: auto;
   margin: 10px 0;
 }
